--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,185 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
-
+  <body class="page__body">
+    <header class="main-header">
+      <a class="main-header__logo">
+        <img src="img/logo-mobile.svg" width="33" height="38" alt="Функциональное
+        питание для котов.">
+      </a>
+      <a class="main-header__logo-text">
+        <img src="img/logo 2.svg" width="101" height="18" alt="Cat Energy.">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--current">
+              <a class="site-list__link" href="index.html">
+                главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="catalog.html">
+                каталог продукции
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">
+                подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="main-container">
+      <h1 class="visually-hidden">Cat Energy - лучшие питание для вашего кота!</h1>
+      <section class="promo">
+        <div class="promo__wrapper">
+          <h2 class="promo__title">
+            Функциональное питание для котов
+          </h2>
+          <p class="promo__description">
+            Занялся собой? Займись котом!
+          </p>
+          <img class="promo__image" src="img/index-can-mobile 1.png" alt="Здоровое питание.">
+          <a class="promo__link button" href="form.html">
+            подобрать программу
+          </a>
+        </div>
+      </section>
+      <section class="programs">
+        <div class="programs-wrapper">
+          <h2 class="visually-hidden">
+            Программы для вашего котика
+          </h2>
+          <ul class="programs__list">
+            <li class="programs__item programs__item--weight-loss">
+              <img class="programs__item-image programs__item-image--weight-loss" src="img/cat-back-slim.svg" width="50"
+              height="53px">
+              <h3 class="programs__title">
+                похудение
+              </h3>
+              <p class="programs__description">
+                Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+              </p>
+              <a class="programs__link" href="catalog.html">каталог slim</a>
+            </li>
+            <li class="programs__item programs__item--weight-gain">
+              <img class="programs__item-image programs__item-image--weight-gain" src="img/cat-back-pro.svg" width="67"
+              height="50px">
+              <h3 class="programs__title">
+                Набор массы
+              </h3>
+              <p class="programs__description">
+                Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+              </p>
+              <a class="programs__link" href="catalog.html">каталог pro</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="advantages">
+        <div class="advantages-wrapper">
+          <h2 class="advantages__title">
+            Как это работает
+          </h2>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <img class="advantages__item-image" src="img/Group-1.svg">
+              <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__item-image" src="img/Group-2.svg">
+              <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__item-image" src="img/Group-3.svg">
+              <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__item-image" src="img/Group-4.svg">
+              <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="example">
+        <div class="example-wrapper">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+            Отличный результат без изнуряющих тренировок!
+            При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+            <ul class="example__list">
+              <li class="example__item">
+                <b class="example__item-title">5 КГ</b>
+                <small class="example__item-description">снижение веса</small>
+              </li>
+              <li class="example__item">
+                <b class="example__item-title">60 ДНЕЙ</b>
+                <small class="example__item-description">затрачено времени</small>
+              </li>
+            </ul>
+            <span class="example__cost">Затраты на питание: 15 000 РУБ.</span>
+            <div class="example__image-slider slider">
+              <img class="slider__image" src="img/cat-before-mobile.png" width="280" height="256" alt="Фото До">
+              <img class="slider__image" src="img/cat-after-mobile.png" width="280" height="256" alt="Фото После">
+              <button class="slider__toggle" type="button">
+                <span class="visually-hidden">До и После похудения</span>
+              </button>
+            </div>
+        </div>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <div class="main-footer__wrapper">
+        <div class="main-footer__contacts contacts">
+          <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
+          <p class="contacts__text">ул. Большая
+            Конюшенная, д. 19/8<br>
+            Санкт-Петербург</p>
+          <img class="contacts__map" src="img/map-mobile.jpg" alt="Карта Петербурга">
+        </div>
+        <a class="main-footer__logo logo" href="#">
+          <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18px" alt="Логотип Cat energy.">
+        </a>
+      </div>
+      <div class="main-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <img class="social__image" src="img/vkontakte.svg">
+              <span class="visually-hidden">Вконтакте.</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <img class="social__image" src="img/youtube.svg">
+              <span class="visually-hidden">Youtube.</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+              <img class="social__image" src="img/telegram.svg">
+              <span class="visually-hidden">Телеграм.</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__copyright copyright">
+        <span class="copyright__text">HTML Academy</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <img class="copyright__image" src="img/html-academy.svg">
+          <span class="visually-hidden">Ссылка на академию</span>
+        </a>
+      </div>
+      </div>
+    </footer>
   </body>
 </html>
