Внесение изменений по второму модулю

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,37 +13,28 @@
       <a class="main-header__logo-text">
         <img src="img/logo 2.svg" width="101" height="18" alt="Cat Energy.">
       </a>
-      <nav class="main-nav">
+      <div class="main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item">
+          <nav class="main-nav__list site-list">
               <a class="site-list__link" href="index.html">
                 главная
               </a>
-            </li>
-            <li class="site-list__item--current">
               <a class="site-list__link" href="catalog.html">
                 каталог продукции
               </a>
-            </li>
-            <li class="site-list__item">
               <a class="site-list__link" href="form.html">
                 подбор программы
               </a>
-            </li>
-          </ul>
+          </nav>
         </div>
-      </nav>
+      </div>
     </header>
     <main class="main-container">
+      <h1 class="catalog__title">Каталог продукции</h1>
       <section class="catalog">
-        <div class="catalog__wrapper">
-        <h1 class="catalog__title">Каталог продукции</h1>
-        <ul class="catalog__list">
-          <li class="catalog__item card">
             <img class="card__image" src="img/catalog-1-desktop 1.png" alt="Cat Energy с курицей">
             <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
             <dl class="card__list">
@@ -55,8 +46,6 @@
               <dd class="card__detail">700 ₽</dd>
           </dl>
           <a class="card__order button" href="#">Заказать</a>
-          </li>
-        </ul>
         <ul class="catalog__list">
           <li class="catalog__item card">
             <img class="card__image" src="img/catalog-1-desktop 1.png" alt="Cat Energy с курицей">
@@ -152,7 +141,6 @@
           <button class="button card-more__button">показать все</button>
         </li>
       </ul>
-     </div>
       </section>
       <section class="additional">
         <ul class="additional__list">
@@ -209,26 +197,18 @@
         </a>
       </div>
       <div class="main-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
               <img class="social__image" src="img/vkontakte.svg">
               <span class="visually-hidden">Вконтакте.</span>
             </a>
-          </li>
-          <li class="social__item">
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
               <img class="social__image" src="img/youtube.svg">
               <span class="visually-hidden">Youtube.</span>
             </a>
-          </li>
-          <li class="social__item">
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
               <img class="social__image" src="img/telegram.svg">
               <span class="visually-hidden">Телеграм.</span>
             </a>
-          </li>
-        </ul>
       </div>
       <div class="main-footer__copyright copyright">
         <span class="copyright__text">HTML Academy</span>
