--- a/source/index.html
+++ b/source/index.html
@@ -11,32 +11,26 @@
         питание для котов.">
       </a>
       <a class="main-header__logo-text">
-        <img src="img/logo 2.svg" width="101" height="18" alt="Cat Energy.">
+        <img src="img/logo-2.svg" width="101" height="18" alt="Cat Energy.">
       </a>
-      <nav class="main-nav">
+      <div class="main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--current">
+          <nav class="main-nav__list site-list">
               <a class="site-list__link" href="index.html">
                 главная
               </a>
-            </li>
-            <li class="site-list__item">
               <a class="site-list__link" href="catalog.html">
                 каталог продукции
               </a>
-            </li>
-            <li class="site-list__item">
               <a class="site-list__link" href="form.html">
                 подбор программы
               </a>
-            </li>
-          </ul>
+          </nav>
         </div>
-      </nav>
+      </div>
     </header>
     <main class="main-container">
       <h1 class="visually-hidden">Cat Energy - лучшие питание для вашего кота!</h1>
@@ -48,7 +42,7 @@
           <p class="promo__description">
             Занялся собой? Займись котом!
           </p>
-          <img class="promo__image" src="img/index-can-mobile 1.png" alt="Здоровое питание.">
+          <img class="promo__image" src="img/index-can-mobile.png" alt="Здоровое питание.">
           <a class="promo__link button" href="form.html">
             подобрать программу
           </a>
@@ -62,7 +56,7 @@
           <ul class="programs__list">
             <li class="programs__item programs__item--weight-loss">
               <img class="programs__item-image programs__item-image--weight-loss" src="img/cat-back-slim.svg" width="50"
-              height="53px">
+              height="53" alt="Худой кот.">
               <h3 class="programs__title">
                 похудение
               </h3>
@@ -73,7 +67,7 @@
             </li>
             <li class="programs__item programs__item--weight-gain">
               <img class="programs__item-image programs__item-image--weight-gain" src="img/cat-back-pro.svg" width="67"
-              height="50px">
+              height="50" alt="Мощный кот.">
               <h3 class="programs__title">
                 Набор массы
               </h3>
@@ -151,26 +145,18 @@
         </a>
       </div>
       <div class="main-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
               <img class="social__image" src="img/vkontakte.svg">
               <span class="visually-hidden">Вконтакте.</span>
             </a>
-          </li>
-          <li class="social__item">
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
               <img class="social__image" src="img/youtube.svg">
               <span class="visually-hidden">Youtube.</span>
             </a>
-          </li>
-          <li class="social__item">
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
               <img class="social__image" src="img/telegram.svg">
               <span class="visually-hidden">Телеграм.</span>
             </a>
-          </li>
-        </ul>
       </div>
       <div class="main-footer__copyright copyright">
         <span class="copyright__text">HTML Academy</span>
