--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
         питание для котов.">
       </a>
       <a class="main-header__logo-text">
-        <img src="img/logo 2.svg" width="101" height="18" alt="Cat Energy.">
+        <img src="img/logo-2.svg" width="101" height="18" alt="Cat Energy.">
       </a>
       <div class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -127,30 +127,29 @@
           <img class="contacts__map" src="img/map-mobile.jpg" alt="Карта Петербурга">
         </div>
         <a class="main-footer__logo logo" href="#">
-          <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18px" alt="Логотип Cat energy.">
+          <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy.">
         </a>
       </div>
       <div class="main-footer__social social">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="social__image" src="img/vkontakte.svg">
+              <img class="social__image" src="img/vkontakte.svg" alt="vkontakte">
               <span class="visually-hidden">Вконтакте.</span>
             </a>
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="social__image" src="img/youtube.svg">
+              <img class="social__image" src="img/youtube.svg" alt="youtube">
               <span class="visually-hidden">Youtube.</span>
             </a>
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="social__image" src="img/telegram.svg">
+              <img class="social__image" src="img/telegram.svg" alt="telegram">
               <span class="visually-hidden">Телеграм.</span>
             </a>
       </div>
       <div class="main-footer__copyright copyright">
         <span class="copyright__text">HTML Academy</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="img/html-academy.svg">
+          <img class="copyright__image" src="img/html-academy.svg" alt="html-academy">
           <span class="visually-hidden">Ссылка на академию</span>
         </a>
-      </div>
       </div>
     </footer>
   </body>
