--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,7 @@
         питание для котов.">
       </a>
       <a class="main-header__logo-text">
-        <img src="img/logo 2.svg" width="101" height="18" alt="Cat Energy.">
+        <img src="img/logo-2.svg" width="101" height="18" alt="Cat Energy.">
       </a>
       <div class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -35,7 +35,7 @@
     <main class="main-container">
       <h1 class="catalog__title">Каталог продукции</h1>
       <section class="catalog">
-            <img class="card__image" src="img/catalog-1-desktop 1.png" alt="Cat Energy с курицей">
+            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
             <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
             <dl class="card__list">
               <dt class="card__term">Масса</dt>
@@ -48,7 +48,7 @@
           <a class="card__order button" href="#">Заказать</a>
         <ul class="catalog__list">
           <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop 1.png" alt="Cat Energy с курицей">
+            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
             <h2 class="card__title">Cat Energy<br> PRO 1000 г</h2>
             <dl class="card__list">
               <dt class="card__term">Масса</dt>
@@ -63,7 +63,7 @@
         </ul>
         <ul class="catalog__list">
           <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop 1.png" alt="Cat Energy с курицей">
+            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
             <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
             <dl class="card__list">
               <dt class="card__term">Масса</dt>
@@ -78,7 +78,7 @@
         </ul>
         <ul class="catalog__list">
           <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop 1.png" alt="Cat Energy с курицей">
+            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
             <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
             <dl class="card__list">
               <dt class="card__term">Масса</dt>
@@ -93,7 +93,7 @@
         </ul>
         <ul class="catalog__list">
           <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop 1.png" alt="Cat Energy с курицей">
+            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
             <h2 class="card__title">Cat Energy<br> SLIM 500 г</h2>
             <dl class="card__list">
               <dt class="card__term">Масса</dt>
@@ -108,7 +108,7 @@
         </ul>
         <ul class="catalog__list">
           <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop 1.png" alt="Cat Energy с курицей">
+            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
             <h2 class="card__title">Cat Energy<br> SLIM 500 г</h2>
             <dl class="card__list">
               <dt class="card__term">Масса</dt>
@@ -123,7 +123,7 @@
         </ul>
         <ul class="catalog__list">
           <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop 1.png" alt="Cat Energy с курицей">
+            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
             <h2 class="card__title">Cat Energy<br> SLIM 500 г</h2>
             <dl class="card__list">
               <dt class="card__term">Масса</dt>
@@ -193,30 +193,29 @@
           <img class="contacts__map" src="img/map-mobile.jpg" alt="Карта Петербурга">
         </div>
         <a class="main-footer__logo logo" href="#">
-          <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18px" alt="Логотип Cat energy.">
+          <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy.">
         </a>
       </div>
       <div class="main-footer__social social">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="social__image" src="img/vkontakte.svg">
+              <img class="social__image" src="img/vkontakte.svg" alt="vkontakte">
               <span class="visually-hidden">Вконтакте.</span>
             </a>
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="social__image" src="img/youtube.svg">
+              <img class="social__image" src="img/youtube.svg" alt="youtube">
               <span class="visually-hidden">Youtube.</span>
             </a>
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="social__image" src="img/telegram.svg">
+              <img class="social__image" src="img/telegram.svg" alt="telegram">
               <span class="visually-hidden">Телеграм.</span>
             </a>
       </div>
       <div class="main-footer__copyright copyright">
         <span class="copyright__text">HTML Academy</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="img/html-academy.svg">
+          <img class="copyright__image" src="img/html-academy.svg" alt="html-academy">
           <span class="visually-hidden">Ссылка на академию</span>
         </a>
-      </div>
       </div>
     </footer>
   </body>
