--- a/source/index.html
+++ b/source/index.html
@@ -86,19 +86,15 @@
           </h2>
           <ul class="advantages__list">
             <li class="advantages__item">
-              <img class="advantages__item-image" src="img/Group-1.svg">
               <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
             <li class="advantages__item">
-              <img class="advantages__item-image" src="img/Group-2.svg">
               <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
             <li class="advantages__item">
-              <img class="advantages__item-image" src="img/Group-3.svg">
               <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
             <li class="advantages__item">
-              <img class="advantages__item-image" src="img/Group-4.svg">
               <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             </li>
           </ul>
@@ -141,30 +137,29 @@
           <img class="contacts__map" src="img/map-mobile.jpg" alt="Карта Петербурга">
         </div>
         <a class="main-footer__logo logo" href="#">
-          <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18px" alt="Логотип Cat energy.">
+          <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy.">
         </a>
       </div>
       <div class="main-footer__social social">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="social__image" src="img/vkontakte.svg">
+              <img class="social__image" src="img/vkontakte.svg" alt="vkontakte">
               <span class="visually-hidden">Вконтакте.</span>
             </a>
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="social__image" src="img/youtube.svg">
+              <img class="social__image" src="img/youtube.svg" alt="youtube">
               <span class="visually-hidden">Youtube.</span>
             </a>
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="social__image" src="img/telegram.svg">
+              <img class="social__image" src="img/telegram.svg" alt="telegram">
               <span class="visually-hidden">Телеграм.</span>
             </a>
       </div>
       <div class="main-footer__copyright copyright">
         <span class="copyright__text">HTML Academy</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="img/html-academy.svg">
+          <img class="copyright__image" src="img/html-academy.svg" alt="html-academy">
           <span class="visually-hidden">Ссылка на академию</span>
         </a>
-      </div>
       </div>
     </footer>
   </body>
