--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="css/style.css" rel="stylesheet" />
   </head>
   <body class="page__body">
     <header class="main-header">
@@ -34,118 +35,107 @@
     </header>
     <main class="main-container">
       <h1 class="catalog__title">Каталог продукции</h1>
-      <section class="catalog">
-            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
-            <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
-            <dl class="card__list">
-              <dt class="card__term">Масса</dt>
-              <dd class="card__detail">500 г</dd>
-              <dt class="card__term">Вкус</dt>
-              <dd class="card__detail">Курица</dd>
-              <dt class="card__term">Цена</dt>
-              <dd class="card__detail">700 ₽</dd>
-          </dl>
-          <a class="card__order button" href="#">Заказать</a>
-        <ul class="catalog__list">
-          <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
-            <h2 class="card__title">Cat Energy<br> PRO 1000 г</h2>
-            <dl class="card__list">
-              <dt class="card__term">Масса</dt>
-              <dd class="card__detail">1000 г</dd>
-              <dt class="card__term">Вкус</dt>
-              <dd class="card__detail">Курица</dd>
-              <dt class="card__term">Цена</dt>
-              <dd class="card__detail">1000 ₽</dd>
-          </dl>
-          <a class="card__order button" href="#">Заказать</a>
-          </li>
-        </ul>
-        <ul class="catalog__list">
-          <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
-            <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
-            <dl class="card__list">
-              <dt class="card__term">Масса</dt>
-              <dd class="card__detail">500 г</dd>
-              <dt class="card__term">Вкус</dt>
-              <dd class="card__detail">Рыба</dd>
-              <dt class="card__term">Цена</dt>
-              <dd class="card__detail">700 ₽</dd>
-          </dl>
-          <a class="card__order button" href="#">Заказать</a>
-          </li>
-        </ul>
-        <ul class="catalog__list">
-          <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
-            <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
-            <dl class="card__list">
-              <dt class="card__term">Масса</dt>
-              <dd class="card__detail">1000 г</dd>
-              <dt class="card__term">Вкус</dt>
-              <dd class="card__detail">Рыба</dd>
-              <dt class="card__term">Цена</dt>
-              <dd class="card__detail">1000 ₽</dd>
-          </dl>
-          <a class="card__order button" href="#">Заказать</a>
-          </li>
-        </ul>
-        <ul class="catalog__list">
-          <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
-            <h2 class="card__title">Cat Energy<br> SLIM 500 г</h2>
-            <dl class="card__list">
-              <dt class="card__term">Масса</dt>
-              <dd class="card__detail">500 г</dd>
-              <dt class="card__term">Вкус</dt>
-              <dd class="card__detail">Гречка</dd>
-              <dt class="card__term">Цена</dt>
-              <dd class="card__detail">400 ₽</dd>
-          </dl>
-          <a class="card__order button" href="#">Заказать</a>
-          </li>
-        </ul>
-        <ul class="catalog__list">
-          <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
-            <h2 class="card__title">Cat Energy<br> SLIM 500 г</h2>
-            <dl class="card__list">
-              <dt class="card__term">Масса</dt>
-              <dd class="card__detail">1000 г</dd>
-              <dt class="card__term">Вкус</dt>
-              <dd class="card__detail">Гречка</dd>
-              <dt class="card__term">Цена</dt>
-              <dd class="card__detail">700 ₽</dd>
-          </dl>
-          <a class="card__order button" href="#">Заказать</a>
-          </li>
-        </ul>
-        <ul class="catalog__list">
-          <li class="catalog__item card">
-            <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
-            <h2 class="card__title">Cat Energy<br> SLIM 500 г</h2>
-            <dl class="card__list">
-              <dt class="card__term">Масса</dt>
-              <dd class="card__detail">500 г</dd>
-              <dt class="card__term">Вкус</dt>
-              <dd class="card__detail">Рис</dd>
-              <dt class="card__term">Цена</dt>
-              <dd class="card__detail">500 ₽</dd>
-          </dl>
-          <a class="card__order button" href="#">Заказать</a>
-          </li>
-        <li class="catalog__item card-more">
-          <h2 class="card-more__title">Показать еще 100500 товаров</h2>
-          <p class="card-more__description">На самом деле вкусов гораздо больше!</p>
-          <button class="button card-more__button">показать все</button>
-        </li>
-      </ul>
+      <section class="catalog card">
+        <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
+        <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
+        <dl class="card__list">
+          <dt class="card__term">Масса</dt>
+          <dd class="card__detail">500 г</dd>
+          <dt class="card__term">Вкус</dt>
+          <dd class="card__detail">Курица</dd>
+          <dt class="card__term">Цена</dt>
+          <dd class="card__detail">700 ₽</dd>
+        </dl>
+        <a class="card__order button" href="#">Заказать</a>
+      </section>
+      <section class="catalog card">
+        <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
+        <h2 class="card__title">Cat Energy<br> PRO 1000 г</h2>
+        <dl class="card__list">
+          <dt class="card__term">Масса</dt>
+          <dd class="card__detail">1000 г</dd>
+          <dt class="card__term">Вкус</dt>
+          <dd class="card__detail">Курица</dd>
+          <dt class="card__term">Цена</dt>
+          <dd class="card__detail">1000 ₽</dd>
+        </dl>
+        <a class="card__order button" href="#">Заказать</a>
+      </section>
+      <section class="catalog card">
+        <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
+        <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
+        <dl class="card__list">
+          <dt class="card__term">Масса</dt>
+          <dd class="card__detail">500 г</dd>
+          <dt class="card__term">Вкус</dt>
+          <dd class="card__detail">Рыба</dd>
+          <dt class="card__term">Цена</dt>
+          <dd class="card__detail">700 ₽</dd>
+        </dl>
+        <a class="card__order button" href="#">Заказать</a>
+      </section>
+      <section class="catalog card">
+        <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
+        <h2 class="card__title">Cat Energy<br> PRO 500 г</h2>
+        <dl class="card__list">
+          <dt class="card__term">Масса</dt>
+          <dd class="card__detail">1000 г</dd>
+          <dt class="card__term">Вкус</dt>
+          <dd class="card__detail">Рыба</dd>
+          <dt class="card__term">Цена</dt>
+          <dd class="card__detail">1000 ₽</dd>
+        </dl>
+        <a class="card__order button" href="#">Заказать</a>
+      </section>
+      <section class="catalog card">
+        <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
+        <h2 class="card__title">Cat Energy<br> SLIM 500 г</h2>
+        <dl class="card__list">
+          <dt class="card__term">Масса</dt>
+          <dd class="card__detail">500 г</dd>
+          <dt class="card__term">Вкус</dt>
+          <dd class="card__detail">Гречка</dd>
+          <dt class="card__term">Цена</dt>
+          <dd class="card__detail">400 ₽</dd>
+        </dl>
+        <a class="card__order button" href="#">Заказать</a>
+      </section>
+      <section class="catalog card">
+        <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
+        <h2 class="card__title">Cat Energy<br> SLIM 500 г</h2>
+        <dl class="card__list">
+          <dt class="card__term">Масса</dt>
+          <dd class="card__detail">1000 г</dd>
+          <dt class="card__term">Вкус</dt>
+          <dd class="card__detail">Гречка</dd>
+          <dt class="card__term">Цена</dt>
+          <dd class="card__detail">700 ₽</dd>
+        </dl>
+        <a class="card__order button" href="#">Заказать</a>
+      </section>
+      <section class="catalog card">
+        <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
+        <h2 class="card__title">Cat Energy<br> SLIM 500 г</h2>
+        <dl class="card__list">
+          <dt class="card__term">Масса</dt>
+          <dd class="card__detail">500 г</dd>
+          <dt class="card__term">Вкус</dt>
+          <dd class="card__detail">Рис</dd>
+          <dt class="card__term">Цена</dt>
+          <dd class="card__detail">500 ₽</dd>
+        </dl>
+        <a class="card__order button" href="#">Заказать</a>
+      <section class="catalog card-more">
+        <h2 class="card-more__title">Показать еще 100500 товаров</h2>
+        <p class="card-more__description">На самом деле вкусов гораздо больше!</p>
+        <button class="button card-more__button">показать все</button>
+      </section>
       </section>
       <section class="additional">
+        <h2 class="additional__title">Дополнительные товары</h2>
         <ul class="additional__list">
           <li class="additional__item card">
-            <h2 class="card__title">Сахарозаменитель</h2>
+            <h3 class="card__title">Сахарозаменитель</h3>
             <dl class="card__list">
               <dt class="card__term">1 упаковка (100 г)</dt>
               <dd class="card__detail">200 ₽</dd>
@@ -153,7 +143,7 @@
             <a class="card__order button" href="#">Заказать</a>
           </li>
           <li class="additional__item card">
-            <h2 class="card__title">питьевая вода</h2>
+            <h3 class="card__title">питьевая вода</h3>
             <dl class="card__list">
               <dt class="card__term">5 литров</dt>
               <dd class="card__detail">50 ₽</dd>
@@ -161,7 +151,7 @@
             <a class="card__order button" href="#">Заказать</a>
           </li>
           <li class="additional__item card">
-            <h2 class="card__title">молоко</h2>
+            <h3 class="card__title">молоко</h3>
             <dl class="card__list">
               <dt class="card__term">1 литр</dt>
               <dd class="card__detail">100 ₽</dd>
@@ -169,7 +159,7 @@
             <a class="card__order button" href="#">Заказать</a>
           </li>
           <li class="additional__item card">
-            <h2 class="card__title">витамины</h2>
+            <h3 class="card__title">витамины</h3>
             <dl class="card__list">
               <dt class="card__term">1 упаковка (30 г)</dt>
               <dd class="card__detail">300 ₽</dd>
@@ -184,39 +174,39 @@
       </section>
     </main>
     <footer class="main-footer">
+      <div class="main-footer__contacts contacts">
+        <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
+        <p class="contacts__address">ул. Большая
+          Конюшенная, д. 19/8<br>
+          Санкт-Петербург</p>
+        <img class="contacts__map" src="img/map-mobile.jpg" alt="Карта Петербурга">
+      </div>
       <div class="main-footer__wrapper">
-        <div class="main-footer__contacts contacts">
-          <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
-          <p class="contacts__text">ул. Большая
-            Конюшенная, д. 19/8<br>
-            Санкт-Петербург</p>
-          <img class="contacts__map" src="img/map-mobile.jpg" alt="Карта Петербурга">
-        </div>
-        <a class="main-footer__logo logo" href="#">
-          <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy.">
-        </a>
-      </div>
-      <div class="main-footer__social social">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="social__image" src="img/vkontakte.svg" alt="vkontakte">
-              <span class="visually-hidden">Вконтакте.</span>
-            </a>
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="social__image" src="img/youtube.svg" alt="youtube">
-              <span class="visually-hidden">Youtube.</span>
-            </a>
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="social__image" src="img/telegram.svg" alt="telegram">
-              <span class="visually-hidden">Телеграм.</span>
-            </a>
-      </div>
-      <div class="main-footer__copyright copyright">
-        <span class="copyright__text">HTML Academy</span>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="img/html-academy.svg" alt="html-academy">
-          <span class="visually-hidden">Ссылка на академию</span>
-        </a>
-      </div>
+      <a class="main-footer__logo logo" href="#">
+        <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy.">
+      </a>
+    <div class="main-footer__social social">
+      <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+        <img class="social__image" src="img/vkontakte.svg" alt="vkontakte">
+        <span class="visually-hidden">Вконтакте.</span>
+      </a>
+      <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+        <img class="social__image" src="img/youtube.svg" alt="youtube">
+        <span class="visually-hidden">Youtube.</span>
+      </a>
+      <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+        <img class="social__image" src="img/telegram.svg" alt="telegram">
+        <span class="visually-hidden">Телеграм.</span>
+      </a>
+    </div>
+    <div class="main-footer__copyright copyright">
+      <span class="copyright__text">HTML Academy</span>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <img class="copyright__image" src="img/html-academy.svg" alt="html-academy">
+        <span class="visually-hidden">Ссылка на академию</span>
+      </a>
+    </div>
+  </div>
     </footer>
   </body>
 </html>
