--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="css/style.css" rel="stylesheet" />
   </head>
   <body class="page__body">
     <header class="main-header">
@@ -42,11 +43,11 @@
           <p class="promo__description">
             Занялся собой? Займись котом!
           </p>
+        </div>
           <img class="promo__image" src="img/index-can-mobile.png" alt="Здоровое питание.">
           <a class="promo__link button" href="form.html">
             подобрать программу
           </a>
-        </div>
       </section>
       <section class="programs">
         <div class="programs-wrapper">
@@ -128,31 +129,30 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="main-footer__wrapper">
         <div class="main-footer__contacts contacts">
           <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
-          <p class="contacts__text">ул. Большая
+          <p class="contacts__address">ул. Большая
             Конюшенная, д. 19/8<br>
             Санкт-Петербург</p>
           <img class="contacts__map" src="img/map-mobile.jpg" alt="Карта Петербурга">
         </div>
+        <div class="main-footer__wrapper">
         <a class="main-footer__logo logo" href="#">
           <img class="main-footer__logo-text" src="img/footer-logo.svg" width="101" height="18" alt="Логотип Cat energy.">
         </a>
-      </div>
       <div class="main-footer__social social">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="social__image" src="img/vkontakte.svg" alt="vkontakte">
-              <span class="visually-hidden">Вконтакте.</span>
-            </a>
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="social__image" src="img/youtube.svg" alt="youtube">
-              <span class="visually-hidden">Youtube.</span>
-            </a>
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="social__image" src="img/telegram.svg" alt="telegram">
-              <span class="visually-hidden">Телеграм.</span>
-            </a>
+        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+          <img class="social__image" src="img/vkontakte.svg" alt="vkontakte">
+          <span class="visually-hidden">Вконтакте.</span>
+        </a>
+        <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+          <img class="social__image" src="img/youtube.svg" alt="youtube">
+          <span class="visually-hidden">Youtube.</span>
+        </a>
+        <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+          <img class="social__image" src="img/telegram.svg" alt="telegram">
+          <span class="visually-hidden">Телеграм.</span>
+        </a>
       </div>
       <div class="main-footer__copyright copyright">
         <span class="copyright__text">HTML Academy</span>
@@ -161,6 +161,7 @@
           <span class="visually-hidden">Ссылка на академию</span>
         </a>
       </div>
+    </div>
     </footer>
   </body>
 </html>
