--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,18 +2,21 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo">
-        <img src="img/logo-mobile.svg" width="33" height="38" alt="Функциональное
-        питание для котов.">
-      </a>
-      <a class="main-header__logo-text">
-        <img src="img/logo-2.svg" width="101" height="18" alt="Cat Energy.">
-      </a>
+      <div class="main-header__logo">
+        <a class="main-header__logo-image">
+          <img src="img/logo-mobile.svg" width="33" height="38" alt="Функциональное
+          питание для котов.">
+        </a>
+        <a class="main-header__logo-text">
+          <img src="img/logo-2.svg" width="101" height="18" alt="Cat Energy.">
+        </a>
+      </div>
       <div class="main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
@@ -46,7 +49,7 @@
           <dt class="card__term">Цена</dt>
           <dd class="card__detail">700 ₽</dd>
         </dl>
-        <a class="card__order button" href="#">Заказать</a>
+        <a class="card__order button button--primary" href="#" >Заказать</a>
       </section>
       <section class="catalog card">
         <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
@@ -59,7 +62,7 @@
           <dt class="card__term">Цена</dt>
           <dd class="card__detail">1000 ₽</dd>
         </dl>
-        <a class="card__order button" href="#">Заказать</a>
+        <a class="card__order button button--primary" href="#">Заказать</a>
       </section>
       <section class="catalog card">
         <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
@@ -72,7 +75,7 @@
           <dt class="card__term">Цена</dt>
           <dd class="card__detail">700 ₽</dd>
         </dl>
-        <a class="card__order button" href="#">Заказать</a>
+        <a class="card__order button button--primary" href="#">Заказать</a>
       </section>
       <section class="catalog card">
         <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
@@ -85,7 +88,7 @@
           <dt class="card__term">Цена</dt>
           <dd class="card__detail">1000 ₽</dd>
         </dl>
-        <a class="card__order button" href="#">Заказать</a>
+        <a class="card__order button button--primary" href="#">Заказать</a>
       </section>
       <section class="catalog card">
         <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
@@ -98,7 +101,7 @@
           <dt class="card__term">Цена</dt>
           <dd class="card__detail">400 ₽</dd>
         </dl>
-        <a class="card__order button" href="#">Заказать</a>
+        <a class="card__order button button--primary" href="#">Заказать</a>
       </section>
       <section class="catalog card">
         <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
@@ -111,7 +114,7 @@
           <dt class="card__term">Цена</dt>
           <dd class="card__detail">700 ₽</dd>
         </dl>
-        <a class="card__order button" href="#">Заказать</a>
+        <a class="card__order button button--primary" href="#">Заказать</a>
       </section>
       <section class="catalog card">
         <img class="card__image" src="img/catalog-1-desktop.png" alt="Cat Energy с курицей">
@@ -124,7 +127,7 @@
           <dt class="card__term">Цена</dt>
           <dd class="card__detail">500 ₽</dd>
         </dl>
-        <a class="card__order button" href="#">Заказать</a>
+        <a class="card__order button button--primary" href="#">Заказать</a>
       <section class="catalog card-more">
         <h2 class="card-more__title">Показать еще 100500 товаров</h2>
         <p class="card-more__description">На самом деле вкусов гораздо больше!</p>
@@ -140,7 +143,7 @@
               <dt class="card__term">1 упаковка (100 г)</dt>
               <dd class="card__detail">200 ₽</dd>
             </dl>
-            <a class="card__order button" href="#">Заказать</a>
+            <a class="card__order button button--primary" href="#">Заказать</a>
           </li>
           <li class="additional__item card">
             <h3 class="card__title">питьевая вода</h3>
@@ -148,7 +151,7 @@
               <dt class="card__term">5 литров</dt>
               <dd class="card__detail">50 ₽</dd>
             </dl>
-            <a class="card__order button" href="#">Заказать</a>
+            <a class="card__order button button--primary" href="#">Заказать</a>
           </li>
           <li class="additional__item card">
             <h3 class="card__title">молоко</h3>
@@ -156,7 +159,7 @@
               <dt class="card__term">1 литр</dt>
               <dd class="card__detail">100 ₽</dd>
             </dl>
-            <a class="card__order button" href="#">Заказать</a>
+            <a class="card__order button button--primary" href="#">Заказать</a>
           </li>
           <li class="additional__item card">
             <h3 class="card__title">витамины</h3>
@@ -164,7 +167,7 @@
               <dt class="card__term">1 упаковка (30 г)</dt>
               <dd class="card__detail">300 ₽</dd>
             </dl>
-            <a class="card__order button" href="#">Заказать</a>
+            <a class="card__order button button--primary" href="#">Заказать</a>
           </li>
         <li class="additional__item card">
           <span class="card__backgraund-image"></span>
