--- a/source/index.html
+++ b/source/index.html
@@ -2,18 +2,21 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo">
+      <div class="main-header__logo">
+      <a class="main-header__logo-image">
         <img src="img/logo-mobile.svg" width="33" height="38" alt="Функциональное
         питание для котов.">
       </a>
       <a class="main-header__logo-text">
         <img src="img/logo-2.svg" width="101" height="18" alt="Cat Energy.">
       </a>
+    </div>
       <div class="main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
@@ -45,7 +48,7 @@
           </p>
         </div>
           <img class="promo__image" src="img/index-can-mobile.png" alt="Здоровое питание.">
-          <a class="promo__link button" href="form.html">
+          <a class="promo__link button button--primary" href="form.html">
             подобрать программу
           </a>
       </section>
@@ -64,7 +67,7 @@
               <p class="programs__description">
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
               </p>
-              <a class="programs__link" href="catalog.html">каталог slim</a>
+              <a class="programs__link button" href="catalog.html">каталог slim</a>
             </li>
             <li class="programs__item programs__item--weight-gain">
               <img class="programs__item-image programs__item-image--weight-gain" src="img/cat-back-pro.svg" width="67"
@@ -75,7 +78,7 @@
               <p class="programs__description">
                 Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
-              <a class="programs__link" href="catalog.html">каталог pro</a>
+              <a class="programs__link button" href="catalog.html">каталог pro</a>
             </li>
           </ul>
         </div>
