--- a/source/form.html
+++ b/source/form.html
@@ -2,18 +2,21 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo">
-        <img src="img/logo-mobile.svg" width="33" height="38" alt="Функциональное
-        питание для котов.">
-      </a>
-      <a class="main-header__logo-text">
-        <img src="img/logo-2.svg" width="101" height="18" alt="Cat Energy.">
-      </a>
+      <div class="main-header__logo">
+        <a class="main-header__logo-image">
+          <img src="img/logo-mobile.svg" width="33" height="38" alt="Функциональное
+          питание для котов.">
+        </a>
+        <a class="main-header__logo-text">
+          <img src="img/logo-2.svg" width="101" height="18" alt="Cat Energy.">
+        </a>
+      </div>
       <div class="main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
@@ -112,7 +115,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="form__button button" type="submit">Отправить заявку</button>
+          <button class="form__button button button--primary" type="submit">Отправить заявку</button>
           <small class="form__text-small"><sup>*</sup> — Обязательные поля</small>
           </div>
           </form>
